# AliceVision

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  BIBLIOGRAPHY.md  BUILD  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS-libmv.md  CONTRIBUTORS.md  COPYING.md  COPYRIGHT.md  Dockerfile  Dockerfile_deps  Dockerfile_ubuntu  Dockerfile_ubuntu_deps  INSTALL.md  INSTALL_LC_OCV_SIFT.txt  LICENSE-MIT-libmv.md  LICENSE-libmv.md  README.md  RELEASING.md  appveyor.yml  cudaInstallAppveyor.cmd  docker-build.sh  flake.nix  sift.sh  siftAll.sh
mv_multiview/projects/CMPMVS/: CMPMVS.cpp  CMakeLists.txt  main_exportDepthMap.cpp  main_texturing.cpp  stdafx.cpp  stdafx.h
mv_multiview/projects/common/: CMakeLists.txt  cmpmvs_omp.hpp  stdafx.cpp  stdafx.h
src/: CMakeLists.txt
src/aliceVision/: CMakeLists.txt  aliceVision.i  alicevision_omp.hpp  global.i  half.hpp  omp.hpp  prettyprint.hpp  types.hpp  unitTest.hpp  version.hpp
src/aliceVision/CUDAInterfaces/: CMakeLists.txt  common_gpu_cpu_structures.hpp  cuda_plane_sweeping.cpp  cuda_plane_sweeping.hpp  refine.cpp  refine.hpp
src/aliceVision/calibration/: CMakeLists.txt  bestImages.cpp  bestImages.hpp  calibration.cpp  calibration.hpp  checkerDetector.cpp  checkerDetector.hpp  checkerDetector_io.cpp  checkerDetector_io.hpp  distortionEstimation.cpp  distortionEstimation.hpp  distortionEstimationGeometry.cpp  distortionEstimationGeometry.hpp  distortionEstimationLine.cpp  distortionEstimationLine.hpp  distortionEstimationPoint.cpp  distortionEstimationPoint.hpp  distortioncalibration_test.cpp  exportData.cpp  exportData.hpp  patternDetect.cpp  patternDetect.hpp
src/aliceVision/camera/: CMakeLists.txt  Camera.i  Distortion.hpp  Distortion.i  Distortion3DE.cpp  Distortion3DE.hpp  Distortion3DE.i  DistortionBrown.cpp  DistortionBrown.hpp  DistortionBrown.i  DistortionFisheye.cpp  DistortionFisheye.hpp  DistortionFisheye.i  DistortionFisheye1.cpp  DistortionFisheye1.hpp  DistortionFisheye1.i  DistortionRadial.cpp  DistortionRadial.hpp  DistortionRadial.i  Equidistant.cpp  Equidistant.hpp  Equidistant.i  EquidistantRadial.hpp  IntrinsicBase.cpp  IntrinsicBase.hpp  IntrinsicBase.i  IntrinsicInitMode.hpp  IntrinsicInitMode.i  IntrinsicScaleOffset.cpp  IntrinsicScaleOffset.hpp  IntrinsicScaleOffset.i  IntrinsicScaleOffsetDisto.cpp  IntrinsicScaleOffsetDisto.hpp  IntrinsicScaleOffsetDisto.i  IntrinsicsScaleOffset.cpp  IntrinsicsScaleOffset.hpp  IntrinsicsScaleOffsetDisto.cpp  IntrinsicsScaleOffsetDisto.hpp  Pinhole.cpp  Pinhole.hpp  (+34 more)
src/aliceVision/cameras/: CMakeLists.txt  Camera_Pinhole_Brown.hpp  Camera_Pinhole_Brown_test.cpp  Camera_Pinhole_Fisheye.hpp  Camera_Pinhole_Fisheye1.hpp  Camera_Pinhole_Fisheye_test.cpp  Camera_Pinhole_Radial_test.cpp  Camera_undistort_image.hpp  cameras.hpp
src/aliceVision/cmdline/: CMakeLists.txt  cmdline.cpp  cmdline.hpp
src/aliceVision/colorHarmonization/: CMakeLists.txt  CommonDataByPair.hpp  CommonDataByPair_fullFrame.hpp  CommonDataByPair_matchedPoints.hpp  CommonDataByPair_vldSegment.hpp  GainOffsetConstraintBuilder.cpp  GainOffsetConstraintBuilder.hpp  gainOffsetConstraintBuilder_test.cpp
src/aliceVision/color_harmonization/: global_quantile_gain_offset_alignment_test.cpp  selection_VLDSegment.hpp  selection_interface.hpp  selection_matchedPoints.hpp
src/aliceVision/common/: CMakeLists.txt  ImagesCache.cpp  ImagesCache.hpp  MultiViewParams.cpp  MultiViewParams.hpp  PreMatchCams.cpp  PreMatchCams.hpp  common.cpp  common.hpp  fileIO.cpp  fileIO.hpp
src/aliceVision/dataio/: CMakeLists.txt  E57Reader.cpp  E57Reader.hpp  FeedProvider.cpp  FeedProvider.hpp  IFeed.cpp  IFeed.hpp  ImageFeed.cpp  ImageFeed.hpp  SfMDataFeed.cpp  SfMDataFeed.hpp  VideoFeed.cpp  VideoFeed.hpp  json.cpp  json.hpp
src/aliceVision/delaunayCut/: CMakeLists.txt  DelaunayGraphCut.cpp  DelaunayGraphCut.hpp  MaxFlow_AdjList.cpp  MaxFlow_AdjList.hpp  MaxFlow_CSR.cpp  MaxFlow_CSR.hpp  delaunayGraphCutTypes.hpp  meshPostProcessing.cpp
src/aliceVision/delaunaycut/: CMakeLists.txt  MaxFlow.cpp  MaxFlow.hpp  MaxFlow_AdjList.cpp  MaxFlow_AdjList.hpp  MaxFlow_CSR.cpp  MaxFlow_CSR.hpp  hallucinations.cpp  hallucinations.hpp  mv_delaunay_GC.cpp  mv_delaunay_GC.hpp  mv_delaunay_GC_grid.cpp  mv_delaunay_GC_grid.hpp  mv_delaunay_TV.cpp  mv_delaunay_TV.hpp  mv_delaunay_helpers.cpp  mv_delaunay_helpers.hpp  mv_delaunay_meshSmooth.cpp  mv_delaunay_meshSmooth.hpp  mv_delaunay_types.hpp
src/aliceVision/depthMap/: BufPtr.hpp  CMakeLists.txt  CustomPatchPatternParams.cpp  CustomPatchPatternParams.hpp  DepthMapEstimator.cpp  (+38 more)
src/aliceVision_Samples/: CMakeLists.txt
src/cmake/: AliceVisionConfig.cmake.in  CXX11.cmake  CodeCoverage.cmake  Dependencies.cmake  FindAlembic.cmake  FindClp.cmake  FindCoinUtils.cmake  FindFlann.cmake  FindGeogram.cmake  FindLemon.cmake  FindLine3D.cmake  FindMAGMA.cmake  FindONNXRuntime.cmake  FindOpenEXR.cmake  FindOpenGV.cmake  FindOpenImageIO.cmake  FindOsi.cmake  FindOsiClp.cmake  FindUSfM.cmake  FindUncertaintyTE.cmake  Findonnxruntime.cmake  Helpers.cmake  MakeBundle.cmake  OptimizeForArchitecture.cmake  check_dependencies_releases.py  cmake_uninstall.cmake.in  config.hpp.in  version.rc.in
src/cmakeFindModules/: AliceVisionConfig.cmake.in  CXX11.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  FindAlembic.cmake  FindCeres.cmake  FindClp.cmake  FindLensfun.cmake  FindLibAV.cmake  FindMosek.cmake  FindOpenEXR.cmake  FindOpenImageIO.cmake  FindUncertaintyTE.cmake  OpenMVGConfig.cmake.in  UpdateCacheVariable.cmake  config.hpp.in
src/dependencies/: CMakeLists.txt
src/openMVG/: CMakeLists.txt  logger.hpp  openmvg_omp.hpp  types.hpp  version.hpp
src/openMVG_Samples/: CMakeLists.txt
src/samples/: CMakeLists.txt
src/software/: CMPMVS.cpp  CMakeLists.txt  MakeBundle.cmake  main_cameraConnection.cpp  main_depthMapEstimation.cpp  main_depthMapFiltering.cpp  main_exportDepthMap.cpp  main_meshDecimate.cpp  main_meshFiltering.cpp  main_meshResampling.cpp  main_meshing.cpp  main_texturing.cpp
src/testing/: testing.h
(+2674 files in other folders)
